// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPickerOption renders with color amber 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--amber"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color blue 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--blue"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color brown 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--brown"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color chartreuse 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--chartreuse"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color green 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--green"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color grey 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--grey"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color lilac 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--lilac"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color orange 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--orange"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color pink 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--pink"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color purple 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--purple"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color rose 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--rose"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with color teal 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--teal"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with defaultProps 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--empty"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with disabled 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--empty ax-color-picker__option--disabled"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with onClick 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--empty ax-color-picker__option--clickable"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.1875rem",
      "height": ".75rem",
      "width": ".75rem",
    }
  }
/>
`;

exports[`ColorPickerOption renders with size 1`] = `
<div
  className="ax-color-picker__option ax-color-picker__option--empty"
  onClick={[Function]}
  style={
    Object {
      "borderWidth": "0.25rem",
      "height": "1rem",
      "width": "1rem",
    }
  }
/>
`;
